# ESPConnect2

./: CMakeLists.txt  README.md  build.sh  build_windows.sh  espconnect2_bug_analysis.md  fix_summary_session1.md
examples/: basic_pairing.c  test_cdn.c  test_quick.c  test_v2.c
examples/basic_pairing/: CMakeLists.txt  sdkconfig.defaults
examples/basic_pairing/main/: CMakeLists.txt  basic_pairing.c
include/: esp_spotify.h
include/internal/: decrypt.h  mercury.h  platform.h  spclient.h  zeroconf.h
src/: decrypt.c  esp_spotify.c  mercury.c  platform_esp32.c  platform_posix.c  platform_windows.c  spclient.c  spotify_login5.c  spotify_login5.h  spotify_login5_parse.c  spotify_login5_parse.h  zeroconf.c
src/google/protobuf/: duration.pb.c  duration.pb.h
src/spotify/login5/v3/: client_info.pb.c  client_info.pb.h  login5.pb.c  login5.pb.h  user_info.pb.c  user_info.pb.h
src/spotify/login5/v3/challenges/: code.pb.c  code.pb.h  hashcash.pb.c  hashcash.pb.h
src/spotify/login5/v3/credentials/: credentials.pb.c  credentials.pb.h
src/spotify/login5/v3/identifiers/: identifiers.pb.c  identifiers.pb.h
test/x86/: Makefile  test_build.c  test_e2e.c  test_pipeline.c
